<resources>
    <string name="app_name">HealthyU</string>
    <string name="signin">SignIn</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="pass">Password</string>
    <string name="cpass">CreatePassword</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="save">Save</string>
    <string name="bloodgroup">BloodGroup</string>
    <string name="logout">LogOut</string>
    <string name="slide_2">Get Your Doctors</string>
    <string name="slide_2_1">Doctor discoverability and consultancy for necessary medical advice in time.</string>
    <string name="slide_3">We take supreme care of your health</string>
    <string name="covidbttn">PRECAUTION / HOME REMEDIES</string>
    <string name="covidupdates">COVID UPDATES</string>

    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="worried_about_your_health">Worried about Your health?</string>
    <string name="we_got_you_covered">We got you covered!</string>
    <string name="get_your_insurance_now">Get Your Insurance Now</string>

    <string name="donate_to_keep_running">Donate us to keep this
        awesome app running and
        making your life easy.
</string>
    <string name="every_penny_matters">Even a single Penny Matters</string>
    <string name="donate_now">Donate Now</string>
    <string name="home_remedies">Home Remedies</string>
    <string name="prevention_video">Prevention Videos of Diffrent Diseases</string>
</resources>